# oral-times-tables-quiz-desktop

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
hooks/: pre-commit
src/app/: CMakeLists.txt  factor_range.cpp  factor_range.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  quiz_config.cpp  quiz_config.hpp  quiz_config_widget.cpp  quiz_config_widget.hpp
